--- a/package.json
+++ b/package.json
@@ -1,53 +1,28 @@
 {
-  "name": "my-app",
-  "version": "0.1.0",
+  "name": "test",
   "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react-apexcharts": "^1.4.1",
-    "react-redux": "^8.1.1",
-    "ag-grid-community": "^30.0.6",
-    "ag-grid-react": "^30.0.6",
-    "bootstrap": "^5.3.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.15.0",
-    "react-scripts": "5.0.1",
-    "react-social-login-buttons": "^3.9.1",
-    "react-table": "^7.8.0",
-    "react-toastify": "^9.1.3",
-    "reactjs-popup": "^2.0.5",
-    "reactjs-social-login": "^2.6.2",
-    "recharts": "^2.7.2",
-    "redux": "^4.2.1",
-    "redux-persist": "^6.0.0",
-    "redux-thunk": "^2.4.2",
-    "web-vitals": "^2.1.4"
-  },
+  "workspaces": [
+    "web",
+    "server"
+  ],
+  "version": "1.0.0",
+  "main": "index.js",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev:server" : "npm run dev -w server",
+    "dev:web" : "npm run start -w web",
+    "start" : "npm run start -w server",
+    "build" : "npm run build -w web",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Ayush472/task.git"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Ayush472/task/issues"
+  },
+  "homepage": "https://github.com/Ayush472/task#readme",
+  "description": ""
 }
