--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "dev": "nodemon src/index.js",
     "run:admin": "npx prisma studio",
     "migrate": "npx prisma migrate dev",
-    "seed" : "npx prisma db seed",
+    "seed": "npx prisma db seed",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "prisma": {
@@ -20,7 +20,9 @@
     "@prisma/client": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "faker": "^6.6.6"
+    "faker": "^6.6.6",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.4"
   },
   "devDependencies": {
     "nodemon": "^3.0.1",
