--- a/web/package.json
+++ b/web/package.json
@@ -3,16 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@lit-labs/react": "^2.0.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "react-apexcharts": "^1.4.1",
-    "react-redux": "^8.1.1",
     "ag-grid-community": "^30.0.6",
     "ag-grid-react": "^30.0.6",
+    "apex-grid": "^1.0.1",
+    "apexcharts": "^3.41.1",
     "bootstrap": "^5.3.1",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.1",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "react-social-login-buttons": "^3.9.1",
@@ -54,6 +58,5 @@
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
   "author": "",
-  "license": "ISC",
-  "devDependencies": {}
+  "license": "ISC"
 }
